# mtrc

./: .gitignore  CMakeLists.txt  main.cpp  mtrc-object.cpp
nodes/: all_nodes.h  parameters.h
